test/error/name_only.htest
#!/usr/bin/env hashdot
#.n

